--- a/style.css
+++ b/style.css
@@ -5,6 +5,39 @@ div.image
     left: 11px;
 }
 
+div.table
+{
+    position: absolute;
+    top: 30px;
+    left: 895px;
+    background-color: #ccccccb4;
+}
+
+table.tab
+{
+    border: solid black 1px;
+    font-family: 'Helvetica';
+    font-weight: normal;
+    font-size: 16pt;
+    border-collapse: collapse;
+}
+
+th,td
+{
+    border: solid black 1px;
+}
+
+#button
+{
+    width: max-content;
+    height: max-content;
+    font-size: 16pt;
+    font-family: 'Helvetica';
+    color: white;
+    background-color: #000000af;
+    border-radius: 7px;
+}
+
 div.bg-color
 {
     position: relative;
